k8/kong/kong-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-admin-service
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
